<resources>
    <string name="app_name">Boxme Dev</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bsin_label">BSIN</string>
    <string name="binid_change_to">BIN ID changed to </string>
    <string name="picked_label"> picked</string>
    <string name="picked_upcase_label">Picked</string>
    <string name="minute_label"> minutes</string>
    <string name="hour_label"> hours </string>
    <string name="binid_label">BIN ID </string>
    <string name="stock_at_label">Stocked at </string>
    <string name="by_label">by </string>
    <string name="on_label"> on </string>
    <string name="product_label">Product: </string>
    <string name="seller_label">Seller: </string>
    <string name="size_label">Size: </string>
    <string name="weight_label">Weight: </string>
    <string name="gram_label"> gram</string>
    <string name="pickuped_label">Pickuped</string>
    <string name="product_name_label">Product Name: </string>

    <string name="xlistview_footer_hint_ready">Load more</string>
    <string name="xlistview_footer_hint_normal">See more</string>
    <string name="xlistview_header_hint_normal">Pull down to refresh</string>
    <string name="xlistview_header_hint_ready">Refesh data release</string>
    <string name="xlistview_header_hint_loading">Loading...</string>
    <string name="xlistview_header_last_time">Last Updated：</string>

    <string name="warehouse_management_system_label">Warehouse Management System</string>
    <string name="main_screen_email_account_label">Your email account</string>
    <string name="main_screen_password_label">Password</string>
    <string name="main_screen_login_label">Login now</string>
    <string name="main_screen_copyright">Power by Boxme JSC.,</string>

    <string name="function_putaway">1. Putaway</string>
    <string name="function_pickup">2. Pickup</string>
    <string name="function_change_location">3. Change location</string>
    <string name="function_check_item">4. Check item</string>
    <string name="function_create_return_code">5. Create return code</string>
    <string name="function_return">6. Return</string>
    <string name="function_logout">7. Logout</string>
    <string name="function_scan_shipment_number">Scan shipment number</string>
    <string name="function_scan_uid">Scan UID</string>
    <string name="function_status_accepted">Accepted</string>
    <string name="function_status_damaged">Damaged</string>
    <string name="function_status_stocked">Stocked</string>
    <string name="function_item_returned">%1$d item returned</string>
    
    <string name="putaway_listing_label">1.1 PUTAWAY LISTING</string>
    <string name="putaway_listing_remaining">Remaining </string>
    <string name="putaway_listing_search">Search putaway listing</string>
    <string name="putaway_listitem_amount_item">%1$d item</string>
    <string name="putaway_listitem_time">Created on %1$s</string>
    <string name="putaway_mapping_remain_uid">Remaining %1$d UID item</string>
    <string name="putaway_mapping_scan_location_binid">Scan location BINID</string>
    <string name="update_scan_new_binid">Scan new BIN ID location</string>
    <string name="putaway_mapping_scan_uid_item">Scan UID item</string>
    <string name="putaway_mapping_label">1.2 PUTAWAY MAPPING</string>
    <string name="putawayed_label">Putawayed</string>
    <string name="putawayed_remain_item_pickuped">%1$d UID items pickuped</string>
    <string name="putaway_mapping_btn_next_putawayed">%1$d UID putawayed &gt;&gt;</string>
    <string name="putawayed_btn_back">&lt;&lt; Back</string>
    <string name="putaway_mapping_scan_binid_first">You have to scan BINID before scan UID</string>
    
    <string name="pickup_listing_label">2.1 PICKUP LISTING</string>
    <string name="pickup_updating_label">2.2 PICKUP UPDATING</string>
    <string name="pickup_search_pickup_listing">Search Order listing</string>
    <string name="pickup_mapping_remain">Remaining %1$d items (UID)</string>
    <string name="pickup_mapping_btn_next_picked">%1$d Order picked &gt;&gt;</string>
    <string name="pickup_search_order">Search order</string>
    <string name="pickup_order_remain">Remaining %1$d Order, %2$d UID</string>
    
    <string name="change_location_label">3.1 LOCATION</string>
    <string name="change_location_update">UPDATE</string>

    <string name="check_item_header_label">3.2 CHECKING UID ITEM</string>
    <string name="create_return_code_scan_txt">Scan status code</string>
    <string name="updated_label">Updated</string>
    <string name="updated_item_return_remain">%1$d items returned</string>
    <string name="return_tracker_label">Tracker</string>
    <string name="return_scan_return_code">Scan return code</string>
    
    <string name="restock_return_label">6.1 Restock return</string>
    <string name="restock_remain_order">Remaining %1$d order</string>

    <string name="error_putaway_not_found">Putaway is not found!</string>
    <string name="error_uid_not_found">%1$s is not found</string>
    <string name="error_putaway_not_putaway">This is not Putaway</string>
    <string name="error_putaway_mapping_not_binid_uidy">This is not BINID or UID</string>
    <string name="success">Success!</string>
    <string name="error_0">The Internet has problem!</string>
    <string name="error_401">Invalid username and password</string>
    <string name="error_403">Lỗi liên quan đến oauth</string>
    <string name="error_404">API is not found</string>
    <string name="error_422">Lỗi tìm dữ liệu không có, dữ liệu không tồn tại</string>
    <string name="error_502">Request Timeout</string>
    <string name="error_not_order">This is not Order</string>
    <string name="error_pickup_not_pickup">This is not Pickup</string>
    <string name="error_not_uid">This is not UID!</string>
    <string name="error_pickup_not_found">Pickup is not found or closed!</string>
    <string name="success_change_change_location">Change Location Successfully!</string>
    <string name="success_create_return_code">Create return code successfully!</string>
    <string name="success_mapping_pickup">Mapping pickup successfully!</string>
    <string name="success_mapping_putaway">Mapping putaway successfully!</string>
    <string name="success_restock_uid_return">Restock successfully!</string>
    <string name="success_undo_pickup">Undo pickup successfully!</string>
    <string name="success_undo_putaway">Undo putaway successfully!</string>



</resources>
