<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/putaway_listing_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/putaway_listing_label" />

    <TextView
        android:id="@+id/putaway_remaining_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textSize="45dp"
        android:textStyle="bold"
        android:text="@string/putaway_listing_remaining" />

    <TextView
        android:id="@+id/uid_remaining_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/putaway_mapping_remain_uid"
        android:visibility="gone" />

    <AutoCompleteTextView
        android:id="@+id/search_putaway_txt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="8dp"
        android:ems="10"
        android:completionThreshold="1"
        android:background="@color/orange"
        android:textColorHint="@color/white"
        android:hint="@string/putaway_listing_search" />

    <TextView
        android:id="@+id/putaway_mapping_scan_uid_txt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:background="@color/orange"
        android:textColorHint="@color/white"
        android:hint="@string/putaway_mapping_scan_uid_item"
        android:visibility="visible" />

    <com.costum.android.widget.LoadMoreListView
        android:id="@+id/putaway_listing_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

</LinearLayout>