<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_screen_logo_boxme_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_activity_logo_marin_top"
        android:src="@drawable/ico_boxme" />

    <TextView
        android:id="@+id/warehouse_management_label_txt"
        android:text="@string/warehouse_management_system_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/main_activity_text_margin_top"
        android:layout_below="@id/main_screen_logo_boxme_img"
        android:textColor="@color/white"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/main_screen_account_email_txt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_below="@id/warehouse_management_label_txt"
        android:hint="@string/main_screen_email_account_label"
        android:textColorHint="@color/hint_text_color"
        android:background="@color/white" />

    <EditText
        android:id="@+id/main_screen_password_txt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_below="@id/main_screen_account_email_txt"
        android:hint="@string/main_screen_password_label"
        android:inputType="textPassword"
        android:textColorHint="@color/hint_text_color"
        android:background="@color/white" />

    <com.rey.material.widget.Button
        android:id="@+id/main_screen_login_btn"
        style="@style/RaiseColorButtonRippleStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/main_screen_password_txt"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:text="@string/main_screen_login_label"
        app:rd_enable="true"
        android:background="@color/orange"/>
    <TextView
        android:id="@+id/main_screen_copyright_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:text="@string/main_screen_copyright"/>

</RelativeLayout>
