<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/putaway_mapping_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/putaway_mapping_label" />

    <TextView
        android:id="@+id/putaway_mapping_packet_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textSize="45dp"
        android:textStyle="bold"
        android:text="PAxxxxxx" />

    <TextView
        android:id="@+id/putaway_mapping_uid_remaining_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textColor="@color/hint_text_color"
        android:text="@string/putaway_mapping_remain_uid" />

    <TextView
        android:id="@+id/scan_location_binid_txt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="8dp"
        android:gravity="center_vertical"
        android:background="@color/orange"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/putaway_mapping_scan_location_binid" />

    <TextView
        android:id="@+id/putaway_mapping_scan_uid_item_txt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:background="@color/orange"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/putaway_mapping_scan_uid_item" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp">

        <Spinner
            android:id="@+id/spinner_status"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="-10dp"
            android:background="@color/orange"
            android:gravity="center_vertical" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">

            <ImageView
                android:id="@+id/btnSpinnerArrow"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ico_arrow" />
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <com.costum.android.widget.LoadMoreListView
            android:id="@+id/putaway_mapping_listview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:divider="@null"
            android:dividerHeight="0dp" />

        <com.andexert.library.RippleView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            rv_centered="true">

            <ImageView
                android:id="@+id/btn_new"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="Create"
                android:src="@drawable/ico_new"
                android:visibility="gone" />
        </com.andexert.library.RippleView>
    </LinearLayout>
</LinearLayout>